Changes done by DEV team

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
 		<version>3.0.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<!-- Changes Done By DEV team -->
+	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>spring_Git_Demo-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
